# telnyx-fax-oss-example

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260212_0001_initial.py
app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: analytics.py  emailer.py  fax_provider.py  orchestrator.py  phone.py  rate_limit.py  retention.py  status_view.py  storage.py  storage_backend.py  webhooks.py
docs/: API_FLOW_EXAMPLE.md  IMPLEMENTATION_STEPS.md  LIVE_RUNBOOK.md  TELNYX_SERVICES_USED.md
tests/: conftest.py  test_api.py  test_emailer.py  test_fax_provider.py
